register and login update

--- a/frontend/src/app/pages/register/register.component.scss
+++ b/frontend/src/app/pages/register/register.component.scss
@@ -8,8 +8,9 @@
 }
 
 .container{
-    background-image: url("../assets/bg5.jpg");
+    background-image: url("../../../assets/bg5.jpg");
     background-size: cover;
+    height:100%;
     width: 100%;
 }
 
