--- a/frontend/src/app/pages/login/login.component.scss
+++ b/frontend/src/app/pages/login/login.component.scss
@@ -1,16 +1,25 @@
 .card{
     background: linear-gradient(180deg, rgba(255, 190,22, 0.6) 0%, rgba(217, 217, 217, 0) 100%);
     width: 431px;
+    margin-top: 7rem;
+    height: 350px;
 }
 
 .card-title{
     color: #ffbe16;
+    font-weight: bold;
 }
 
-.container{
-    background-image: url("../assets/bg5.jpg");
+.mycontainer{
+    background-image: url("../../../assets/bg5.jpg");
     background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     width: 100%;
+   height: auto;
+   padding: 0;
+   margin: 0;
+   height: 50rem;
 }
 
 .btn{
@@ -23,6 +32,7 @@
     color: #ffbe16; 
     font-weight: bold;
     display: flex;
+    
 }
 
 input {
@@ -52,3 +62,9 @@ input {
 .label{
     display: flex;
 }
+
+.form-check{
+    display: flex;
+    justify-content: space-between;
+}
+
