--- a/frontend/src/app/pages/register/register.component.html
+++ b/frontend/src/app/pages/register/register.component.html
@@ -54,7 +54,7 @@
                     <button type="submit" class="btn" (click)="AddUser()">REGISTER</button>
                   </div>
                   <label for="verirfy" class="text text-white form-label">Already Registered?</label>
-                  <a href="#" class="login text-decoration-none"> LOGIN</a>
+                  <a [routerLink]="['/login']" class="login text-decoration-none"> LOGIN</a>
                 </div>
               </div>
         </div>
