--- a/frontend/src/app/pages/register/register.component.html
+++ b/frontend/src/app/pages/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="mycontainer">
     <Form [formGroup] = "AddUserForm">
         <ul>
             <div class="d-flex justify-content-center">
@@ -34,13 +34,13 @@
                     <div class="input-group-prepend">
                       <span style="background-color: #fff;border: none;"class="input-group-text" id="basic-addon1"><i class="bi bi-lock-fill"></i></span>
                     </div>
-                    <input formControlName="password"  style="border-left: none;" type="text" class="font-weight-light form-control" placeholder="PASSWORD" aria-label="Username" aria-describedby="basic-addon1">
+                    <input formControlName="password"  style="border-left: none;" type="password" class="font-weight-light form-control" placeholder="PASSWORD" aria-label="Username" aria-describedby="basic-addon1">
                 </div>
                   <div class="input-group col-auto mb-3">
                     <div class="input-group-prepend">
                       <span style="background-color: #fff;border: none;"class="input-group-text" id="basic-addon1"><i class="bi bi-lock-fill"></i></span>
                     </div>
-                    <input formControlName="confirmPass"  style="border-left: none;" type="text" class="font-weight-light form-control" placeholder="CONFIRM PASSWORD" aria-label="Username" aria-describedby="basic-addon1">
+                    <input formControlName="confirmPass"  style="border-left: none;" type="password" class="font-weight-light form-control" placeholder="CONFIRM PASSWORD" aria-label="Username" aria-describedby="basic-addon1">
                 </div>
                   <div class="col-auto">
                     <div class="form-check">
