--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -16,7 +16,7 @@
                     <div class="input-group-prepend">
                       <span style="background-color: #fff;border: none;"class="input-group-text" id="basic-addon1"><i class="bi bi-lock-fill"></i></span>
                     </div>
-                    <input formControlName="password"  style="border-left: none;" type="text" class="font-weight-light form-control" placeholder="PASSWORD" aria-label="Username" aria-describedby="basic-addon1">
+                    <input formControlName="password"  style="border-left: none;" type="password" class="font-weight-light form-control" placeholder="PASSWORD" aria-label="Username" aria-describedby="basic-addon1">
                 </div>
                 <div class="col-auto">
                     <div class="form-check">
