--- a/frontend/src/app/pages/register/register.component.html
+++ b/frontend/src/app/pages/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="mycontainer">
-    <Form [formGroup] = "AddUserForm">
+    <Form [formGroup] = "AddUserForm" novalidate> 
         <ul>
             <div class="d-flex justify-content-center">
             
@@ -10,37 +10,83 @@
                         <div class="input-group-prepend">
                           <span style="background-color: #fff;border: none;"class="input-group-text" id="basic-addon1"><i class="bi bi-person-fill"></i></span>
                         </div>
-                        <input formControlName="firstname" style="border-left: none;" type="text" class="font-weight-light form-control" placeholder="FIRST NAME" aria-label="Username" aria-describedby="basic-addon1">
+                        <input formControlName="firstname" 
+                        style="border-left: none;" type="text" class="font-weight-light form-control" placeholder="FIRST NAME"  aria-describedby="basic-addon1"
+                        [ngClass]="{ 'is-invalid': submitted && formValidation['firstname'].errors }"
+                        />
+
+                        <div *ngIf="submitted && formValidation['firstname'].errors" class="invalid-feedback">
+                          <div *ngIf="formValidation['firstname'].errors['required']">Firstname is required</div>
+                        </div>
                     </div>
+
                   <div class="input-group col-auto mb-3">
                     <div class="input-group-prepend">
                       <span style="background-color: #fff;border: none;"class="input-group-text" id="basic-addon1"><i class="bi bi-person-fill"></i></span>
                     </div>
-                    <input formControlName="lastname"  style="border-left: none;" type="text" class="font-weight-light form-control" placeholder="LAST NAME" aria-label="Username" aria-describedby="basic-addon1">
-                </div>
+                    <input formControlName="lastname"  style="border-left: none;" type="text" class="font-weight-light form-control" placeholder="LAST NAME" 
+                    [ngClass]="{ 'is-invalid': submitted && formValidation['lastname'].errors }"
+                    />
+
+                    <div *ngIf="submitted && formValidation['lastname'].errors" class="invalid-feedback">
+                      <div *ngIf="formValidation['lastname'].errors['required']">Lastname is required</div>
+                    </div>
+                  </div>
+
                   <div class="input-group col-auto mb-3">
                     <div class="input-group-prepend">
                       <span style="background-color: #fff;border: none;"class="input-group-text" id="basic-addon1"><i class="bi bi-envelope-fill"></i></span>
                     </div>
-                    <input formControlName="phone"  style="border-left: none;" type="text" class="font-weight-light form-control" placeholder="PHONE" aria-label="Username" aria-describedby="basic-addon1">
+                    <input formControlName="phone" class="font-weight-light form-control" placeholder="PHONE" 
+                    [ngClass]="{ 'is-invalid': submitted && formValidation['phone'].errors }"
+                    />
+                    <div *ngIf="submitted && formValidation['phone'].errors" class="invalid-feedback">
+                      <div *ngIf="formValidation['phone'].errors['required']">Phone is required</div>
+                      <div *ngIf="formValidation['phone'].errors['minlength']">
+                        Phone must be at least 10 characters
+                      </div>
+                      <div *ngIf="formValidation['phone'].errors['maxlength']">
+                        Phone must not exceed 10 characters
+                      </div>
+                    </div>
                 </div>
+
                 <div class="input-group col-auto mb-3">
                   <div class="input-group-prepend">
                     <span style="background-color: #fff;border: none;"class="input-group-text" id="basic-addon1"><i class="bi bi-envelope-fill"></i></span>
                   </div>
-                  <input formControlName="email"  style="border-left: none;" type="text" class="font-weight-light form-control" placeholder="E-MAIL" aria-label="Username" aria-describedby="basic-addon1">
+                  <input formControlName="email" style="border-left: none;" type="text" class="font-weight-light form-control" placeholder="E-MAIL"
+                  [ngClass]="{ 'is-invalid': submitted && formValidation['email'].errors }"
+                  />
+                  <div *ngIf="submitted && formValidation['email'].errors" class="invalid-feedback">
+                    <div *ngIf="formValidation['email'].errors['required']">Email is required</div>
+                    <div *ngIf="formValidation['email'].errors['email']">Email is invalid</div>
+                  </div>
+
               </div>
                   <div class="input-group col-auto mb-3">
                     <div class="input-group-prepend">
                       <span style="background-color: #fff;border: none;"class="input-group-text" id="basic-addon1"><i class="bi bi-lock-fill"></i></span>
                     </div>
-                    <input formControlName="password"  style="border-left: none;" type="password" class="font-weight-light form-control" placeholder="PASSWORD" aria-label="Username" aria-describedby="basic-addon1">
+                    <input formControlName="password"  style="border-left: none;" type="password" class="font-weight-light form-control" placeholder="PASSWORD" 
+                    [ngClass]="{ 'is-invalid': submitted && formValidation['password'].errors }"
+                    />
+
+                    <div *ngIf="submitted && formValidation['password'].errors" class="invalid-feedback">
+                      <div *ngIf="formValidation['password'].errors['required']">Password is required</div>
+                    </div>
                 </div>
                   <div class="input-group col-auto mb-3">
                     <div class="input-group-prepend">
                       <span style="background-color: #fff;border: none;"class="input-group-text" id="basic-addon1"><i class="bi bi-lock-fill"></i></span>
                     </div>
-                    <input formControlName="confirmPass"  style="border-left: none;" type="password" class="font-weight-light form-control" placeholder="CONFIRM PASSWORD" aria-label="Username" aria-describedby="basic-addon1">
+                    <input formControlName="confirmPass"  style="border-left: none;" type="password" class="font-weight-light form-control" placeholder="CONFIRM PASSWORD" 
+                    [ngClass]="{ 'is-invalid': submitted && formValidation['confirmPass'].errors }"
+                    />
+
+                    <div *ngIf="submitted && formValidation['confirmPass'].errors" class="invalid-feedback">
+                      <div *ngIf="formValidation['confirmPass'].errors['confirmPass']">Password is required</div>
+                    </div>
                 </div>
                   <div class="col-auto">
                     <div class="form-check">
