landing page updates

--- a/frontend/src/app/pages/landing/landing.component.html
+++ b/frontend/src/app/pages/landing/landing.component.html
@@ -1,1 +1,44 @@
-<p>landing works!</p>
+<!-- <div class="container"> -->
+ 
+<!-- </div> -->
+
+<!-- ============================================================== -->
+
+
+<div class="p-4">
+      <!-- Section: Images -->
+      <section class="">
+        <div class="row">
+          <div class="col">
+            <div
+            >
+              <img
+                src="https://images.unsplash.com/photo-1501432062811-61cbb25811dc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2940&q=80"
+                class="w-100"
+              />
+            </div>
+          </div>
+          <div class="col">
+            <div
+            >
+              <img
+                src="https://images.unsplash.com/photo-1484373030460-8de45ac8796d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"
+                class="w-100"
+              />
+            </div>
+          </div>
+          <div class="col">
+            <div
+            >
+              <img
+                src="https://images.unsplash.com/photo-1604657645490-c228a616c7ee?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2071&q=80"
+                class="w-100"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Section: Images -->
+    </div>
+
+    
