--- a/frontend/src/app/shared/footer/footer.component.html
+++ b/frontend/src/app/shared/footer/footer.component.html
@@ -1,1 +1,109 @@
-<p>footer works!</p>
+<!-- Footer -->
+  <footer class="text-center text-white" style="background-color: #ffbe16;">
+    <!-- Grid container -->
+    <div class="container pt-4">
+      <!-- Section: Social media -->
+      <section class="mb-4">
+        <!-- Facebook -->
+        <a
+        class="btn btn-outline-light  m-1" href="#!" role="button"
+          ><i class="bi bi-facebook"></i>
+        </a>
+  
+        <!-- Twitter -->
+        <a
+        class="btn btn-outline-light  m-1" href="#!" role="button"
+          ><i class="bi bi-twitter"></i>
+        </a>
+  
+        <!-- Google -->
+        <a
+        class="btn btn-outline-light  m-1" href="#!" role="button"
+          ><i class="bi bi-google"></i>
+        </a>
+  
+        <!-- Instagram -->
+        <a
+        class="btn btn-outline-light  m-1" href="#!" role="button"
+          ><i class="bi bi-instagram"></i>
+        </a>
+  
+        <!-- Linkedin -->
+        <a
+        class="btn btn-outline-light  m-1" href="#!" role="button"
+          ><i class="bi bi-linkedin"></i>
+        </a>
+
+        <!-- Github -->
+        <a
+        class="btn btn-outline-light  m-1" href="#!" role="button"
+          ><i class="bi bi-github"></i>
+        </a>
+      </section>
+      <!-- Section: Social media -->
+    </div>
+    <!-- Grid container -->
+    <!-- Section: Links  -->
+    <section class="">
+      <div class="container text-center text-md-start mt-5">
+        <!-- Grid row -->
+        <div class="row mt-3">
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+            <!-- Content -->
+            <h6 class="text-uppercase fw-bold mb-4">
+              <i class="fas fa-gem me-3"></i>ZWIENDEDZI <h6>RENTAL SOLUTIONS</h6>
+            </h6>
+            <p>
+                Take the stress out with all the right services waiting for you, from safety, comfort, 
+                luxury and many more at affordable prices.
+            </p>
+          </div>
+          <!-- Grid column -->
+  
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-4">
+              Useful links
+            </h6>
+            <p>
+              <a href="#!" class="text-reset">Pricing</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Settings</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Orders</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Help</a>
+            </p>
+          </div>
+          <!-- Grid column -->
+  
+          <!-- Grid column -->
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-4">Contact Us</h6>
+            <p><i class="bi bi-house-fill m-2 me-3"></i>   The Media Mill, 7 Quince St, Auckland Park, Johannesburg, 2000</p>
+            <p>
+              <i class="bi bi-envelope-fill m-2 me-3"></i>
+              rental@zwiendedzicars.co.za
+            </p>
+            <p><i class="bi bi-telephone-fill me-3"></i> +27 61 544 9366</p>
+          </div>
+          <!-- Grid column -->
+        </div>
+        <!-- Grid row -->
+      </div>
+    </section>
+    <!-- Section: Links  -->
+  
+    <!-- Copyright -->
+    <div class="text-center font-italic p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+        Travel Hassle-Free With Zwiendedzi Rental Solutions...!
+    </div>
+    <!-- Copyright -->
+  </footer>
+  <!-- Footer -->
