--- a/frontend/src/app/layout/layout.component.html
+++ b/frontend/src/app/layout/layout.component.html
@@ -1,3 +1,20 @@
-<app-header></app-header>
+<div *ngIf="!rout">
+    <app-header></app-header>
+</div>
+<div *ngIf="rout">
+    <div class="row d-block w-100 h-50 bg-image text-center">
+
+        <div class="mx-auto">
+            <app-header></app-header>
+            <div class="row">
+                <div class="col-lg-6 col-sm-12 w-100 justify-content-center text-center mx-auto">
+                    <app-search></app-search>
+                </div>
+            </div>
+            
+        </div>
+    </div>    
+</div>
+
 <router-outlet></router-outlet>
 <app-footer></app-footer>
