--- a/frontend/src/app/shared/header/header.component.scss
+++ b/frontend/src/app/shared/header/header.component.scss
@@ -1,11 +1,12 @@
-.my-container
-{
-    background-image: url('../../../assets/bg5.jpg');
-    background-size: cover;
-    width: 102%;
-    height: 900px;
+// .my-container
+// {
+//     // background-image: url('../../../assets/bg5.jpg');
+//     // background-size: cover;
+//     // width: 102%;
+//     // height: 900px;
 
-}
+// }
+
 .navbar button
 {
     color: #FFBE16;
@@ -33,3 +34,8 @@
     margin-left: 5rem;
 
 }
+
+.collapse a{
+    color: white;
+}
+
