--- a/frontend/src/app/pages/seden/seden.component.html
+++ b/frontend/src/app/pages/seden/seden.component.html
@@ -5,19 +5,19 @@
     <h4 class="head" >TRAVEL IN COMFORT</h4>
   -->
   <div class="head">
-    <h1>SUV</h1>
+    <h1>SEDEN</h1>
     </div>
     <div class="subhead">
-        <h6>Travel in comfort with our SUV's</h6>
+        <h6>Travel in comfort with our SEDEN's</h6>
     </div>
     <div class="container-fluid">
         <div class="row">
           <div class="col-lg-2 col-md-4 col-sm-1">
             
             <div class="card">
-                <img src="../../../assets/suv.webp" alt="">
+                <img src="../../../assets/seden2.png" alt="">
                 <div class="card-body">
-                  <h5 class="card-title">Range Rover</h5>
+                  <h5 class="card-title">VW Polo</h5>
                   <a href="#" class="btn btn-primary">R927.00</a>
                 </div>
               </div>
@@ -25,9 +25,9 @@
 
           <div class="col-lg-2 col-md-4 col-sm-1">
             <div class="card">
-                <img src="../../../assets/suv.webp" alt="">
+                <img src="../../../assets/seden2.png" alt="">
                 <div class="card-body">
-                  <h5 class="card-title">BMW X5</h5>
+                  <h5 class="card-title">Audi A6</h5>
                   <a href="#" class="btn btn-primary">R927.00</a>
                 </div>
               </div>
@@ -35,9 +35,9 @@
 
           <div class="col-lg-2 col-md-4 col-sm-1">
             <div class="card">
-                <img src="../../../assets/suv.webp" alt="">
+                <img src="../../../assets/seden2.png" alt="">
                 <div class="card-body">
-                  <h5 class="card-title">Opel Mokka</h5>
+                  <h5 class="card-title">BMW 320i M7</h5>
                   <a href="#" class="btn btn-primary">R927.00</a>
                 </div>
               </div>
@@ -45,9 +45,9 @@
 
           <div class="col-lg-2 col-md-4 col-sm-1">
             <div class="card">
-                <img src="../../../assets/suv.webp" alt="">
+                <img src="../../../assets/seden2.png" alt="">
                 <div class="card-body">
-                  <h5 class="card-title">Benz G63 AMG</h5>
+                  <h5 class="card-title">Benz C Class</h5>
                   <a href="#" class="btn btn-primary">R927.00</a>
                 </div>
               </div>
@@ -55,9 +55,9 @@
 
           <div class="col-lg-2 col-md-4 col-sm-1">
             <div class="card">
-                <img src="../../../assets/suv.webp" alt="">
+                <img src="../../../assets/seden2.png" alt="">
                 <div class="card-body">
-                  <h5 class="card-title">Nissan Qashqai</h5>
+                  <h5 class="card-title">VW Jetta</h5>
                   <a href="#" class="btn btn-primary">R927.00</a>
                 </div>
               </div>
@@ -65,9 +65,9 @@
 
           <div class="col-lg-2 col-md-4 col-sm-1">
             <div class="card">
-                <img src="../../../assets/suv.webp" alt="">
+                <img src="../../../assets/seden2.png" alt="">
                 <div class="card-body">
-                  <h5 class="card-title">Audi Q7</h5>
+                  <h5 class="card-title">Audi A5</h5>
                   <a href="#" class="btn btn-primary">R927.00</a>
                 </div>
               </div>
@@ -81,9 +81,9 @@
         <div class="row">
             <div class="col-lg-2 col-md-4 col-sm-1">
               <div class="card">
-                  <img src="../../../assets/suv.webp" alt="">
+                  <img src="../../../assets/seden2.png" alt="">
                   <div class="card-body">
-                    <h5 class="card-title">Tiguan</h5>
+                    <h5 class="card-title">Toyota Corolla</h5>
                     <button class="btn btn-primary" >R927.00</button>
 
                   </div>
@@ -92,9 +92,9 @@
   
             <div class="col-lg-2 col-md-4 col-sm-1">
               <div class="card">
-                  <img src="../../../assets/suv.webp" alt="">
+                  <img src="../../../assets/seden2.png" alt="">
                   <div class="card-body">
-                    <h5 class="card-title">BMW X5</h5>
+                    <h5 class="card-title">Mazda 3</h5>
                     <a href="#" class="btn btn-primary">R927.00</a>
                   </div>
                 </div>
@@ -102,9 +102,9 @@
   
             <div class="col-lg-2 col-md-4 col-sm-1">
               <div class="card">
-                  <img src="../../../assets/suv.webp" alt="">
+                  <img src="../../../assets/seden2.png" alt="">
                   <div class="card-body">
-                    <h5 class="card-title">Opel Mokka</h5>
+                    <h5 class="card-title">KIA K5</h5>
                     <a href="#" class="btn btn-primary">R927.00</a>
                   </div>
                 </div>
@@ -112,9 +112,9 @@
   
             <div class="col-lg-2 col-md-4 col-sm-1">
               <div class="card">
-                  <img src="../../../assets/suv.webp" alt="">
+                  <img src="../../../assets/seden2.png" alt="">
                   <div class="card-body">
-                    <h5 class="card-title">Benz G63 AMG</h5>
+                    <h5 class="card-title">Benz AMG E53</h5>
                     <a href="#" class="btn btn-primary">R927.00</a>
                   </div>
                 </div>
@@ -122,9 +122,9 @@
   
             <div class="col-lg-2 col-md-4 col-sm-1">
               <div class="card">
-                  <img src="../../../assets/suv.webp" alt="">
+                  <img src="../../../assets/seden2.png" alt="">
                   <div class="card-body">
-                    <h5 class="card-title">NISSAN QASHQAI</h5>
+                    <h5 class="card-title">Nissan Altima</h5>
                     <a href="#" class="btn btn-primary">R927.00</a>
                   </div>
                 </div>
@@ -132,9 +132,9 @@
   
             <div class="col-lg-2 col-md-4 col-sm-1">
               <div class="card">
-                  <img src="../../../assets/suv.webp" alt="">
+                  <img src="../../../assets/seden2.png" alt="">
                   <div class="card-body">
-                    <h5 class="card-title">Porshe</h5>
+                    <h5 class="card-title">VW Polo Vivo</h5>
                     <a href="#" class="btn btn-primary">R927.00</a>
                   </div>
                 </div>
