--- a/frontend/src/app/pages/booking/booking.component.html
+++ b/frontend/src/app/pages/booking/booking.component.html
@@ -1,31 +1,229 @@
+<div class="container py-3">
+  <div class="row" *ngFor="let car of cars">
+    <div class="col-lg-6">
+      <img src="{{car.carImage}}" class="w-10 pb-2" alt="">
+      
+        <div class="col-lg-12">
+          <h3>Car Info</h3>
+          <div class="row">
+            <div class="col-lg-6">
+              <p><i class="bi bi-person pr-3"></i><strong>Name: </strong>{{ car.carName }}</p>
+           </div>
+           <div class="col-lg-6">
+             <p><i class="bi bi-person pr-3"></i><strong>Madel: </strong>{{ car.model }}</p>
+           </div>
+           <div class="col-lg-6">
+             <p><i class="bi bi-person pr-3"></i><strong>Make: </strong>{{ car.make }}</p>
+           </div>
+             <div class="col-lg-6">
+               <p><i class="bi bi-person pr-3"></i><strong>Name: </strong>Manual</p>
+           </div>
+          </div>
+        </div><br>
+        <div class="col-lg-12">
+            <h3>Car Specs</h3>
+            <div class="row">
+              <div class="col-lg-4 mb-2">
+                <div class="card p-2">
+                  <span><small>Max Power</small></span>
+                  <span class="cardSpecNum">350</span>
+                  <span><small>hp</small></span>
+                </div>
+              </div><br>
+              <div class="col-lg-4 mb-2">
+                <div class="card p-2">
+                  <span><small>0-60 km/s</small></span>
+                  <span class="cardSpecNum">5.4</span>
+                  <span><small>sec.</small></span>
+                </div>
+              </div><br>
+              <div class="col-lg-4 mb-2">
+                <div class="card p-2">
+                  <span><small>Top Speed</small></span>
+                  <span class="cardSpecNum">187</span>
+                  <span><small>km/h</small></span>
+                </div>
+              </div>
+            </div>
+      </div>
+    </div>
+    <div class="col-lg-6">
+        <div class="row mx-3">
+          <h2>User details</h2>
+        </div>
+        <div class="row mx-3">
+          <div class="card mx-auto">
+            <div class="row" *ngFor="let user of users">
+                <div class="col-lg-10 col-sm-10 mx-5 my-2">
+                   <div class="row">
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <div class="row">
+                              <label for="inputPassword" class="col-sm-12 col-form-label">First Name</label>
+                              <div class="col-sm-12">
+                                <input type="text" class="form-control" placeholder='{{user.firstname}}' value="" id="inputPassword" readonly>
+                              </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                          <div class="row">
+                            <label for="inputPassword" class="col-sm-12 col-form-label"><small>
+                              Last Name</small></label>
+                            <div class=" col-lg-12 col-sm-12">
+                              <input type="text" placeholder='{{user.lastname}}' readonly class="form-control" id="inputPassword">
+                            </div>
+                          </div>
+                        </div>
+                   </div>
 
-  <table class="table-responsive" >
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">UserID</th>
-        <th scope="col">CarID</th>
-        <th scope="col">Make</th>
-        <th scope="col">Model</th>
-        <th scope="col">Pick-Up</th>
-        <th scope="col">Time</th>
-        <th scope="col">Drop-Off</th>
-        <th scope="col">Time</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let booking of bookings">
-        <th scope="row">{{booking.id}}</th>
-        <td>{{booking.useID}}</td>
-        <td>{{booking.carID}}</td>
-        <td>{{booking.car_model}}</td>
-        <td>{{booking.car_make}}</td>
-        <td>{{booking.pick_up}}</td>
-        <td>{{booking.pickup_time}}</td>
-        <td>{{booking.drop_off}}</td>
-        <td>{{booking.dropoff_time}}</td>
-      </tr>
-    </tbody>
-  </table>
+                   <div class="row">
+                      <div class="col-lg-12">
+                        <label for="inputPassword" class="col-sm-12 col-form-label">Email</label>
+                        <div class="col-sm-12">
+                          <input type="text" placeholder='{{user.email}}' readonly class="form-control" id="inputPassword">
+                        </div>
+                      </div>
+                    </div>
 
+                   <div class="row">
+                    <div class="col-lg-6 col-md-6 col-sm-12">
+                        <div class="row">
+                          <label for="inputPassword" class="col-sm-12 col-form-label">Phone</label>
+                          <div class="col-sm-12">
+                            <input type="text" placeholder='{{user.phone}}' readonly class="form-control" id="inputPassword">
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-6 col-sm-12">
+                      <div class="row">
+                        <label for="inputPassword" class="col-sm-12 col-form-label"><small>
+                          User Type</small></label>
+                        <div class=" col-lg-12 col-sm-12">
+                          <input type="text" placeholder='{{user.usertype}}' readonly class="form-control" id="inputPassword">
+                        </div>
+                       </div>
+                      </div>
+                    </div>
+
+                   <br>
+                </div>
+            </div>
+            
+        </div>
+
+        </div>
+        <div class="row mx-3 my-2">
+          <h2>Pickup details</h2>
+        </div>
+        <Form [formGroup] = "BookingForm" novalidate>
+          <div class="row mx-3">
+
+            <div class="card mx-auto">
+              <div class="row">
+                  <div class="col-lg-10 col-sm-10 mx-5 my-2">
+                      <div class="row">
+                          <label for="inputPassword" class="col-lg-12 col-sm-12 col-form-label"><small>
+                            PICK-UP LOCATION
+                          </small></label>
+                          <div class=" col-lg-12 col-sm-12">
+                              <select id="inputState" class="form-control" formControlName="comp_id">
+                                  <option [ngClass]="null" selected>Select Location...</option>
+                                  <option *ngFor="let cp of company" value='{{cp.companyID}}'>{{cp.companyName}}</option>
+                                </select>
+                          </div>
+                      </div>
+                    <br>
+                    <div class="row">
+                          <div class="col-lg-6 col-md-6 col-sm-12">
+                              <div class="row">
+                                  <label for="inputPassword" class="col-lg-12 col-sm-12 col-form-label">
+                                    <small>PICK-UP DATE</small></label>
+                                  <div class=" col-lg-12 col-sm-12">
+                                      <input type="datetime-local" class="form-control" formControlName="pickup_date" placeholder="Datepicker"
+                                      [ngClass]="{ 'is-invalid': submitted && formValidation['pickup_date'].errors }"
+                                      />
+              
+                                      <div *ngIf="submitted && formValidation['pickup_date'].errors" class="invalid-feedback">
+                                        <div *ngIf="formValidation['pickup_date'].errors['required']">Pickup date is required</div>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="col-lg-6 col-md-6 col-sm-12">
+                              <div class="row">
+                                  <label for="inputPassword" class="col-lg-12 col-sm-12 col-form-label">
+                                    <small>DROP-OFF DATE</small></label>
+                                  <div class=" col-lg-12 col-sm-12">
+                                      <input type="datetime-local" class="form-control" formControlName="dropoff_date" placeholder="Datepicker"
+                                      [ngClass]="{ 'is-invalid': submitted && formValidation['dropoff_date'].errors }"
+                                      />
+              
+                                      <div *ngIf="submitted && formValidation['dropoff_date'].errors" class="invalid-feedback">
+                                        <div *ngIf="formValidation['dropoff_date'].errors['required']">Dropoff date is required</div>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                    </div>
+                    <br>
+                  </div>
+              </div>
+              
+          </div>
+          </div>
+
+          <div class="row">
+            <div class="col text-center my-3">
+                <button class="btn btn-warning" (click)="addBooking()">Book Now <i class="bi bi-arrow"></i></button>
+            </div>
+          </div>
+        </Form>
+
+    </div>
+  </div>
+  
+</div>
+
+ <!-- ----------------------------------------------- -->
+
+ <div class="container">
+  <div class="row">
+    <table class="table table-responsive" >
+      <thead>
+        <tr>
+          <th scope="col">Booking No</th>
+          <th scope="col" colspan="2">Renter</th>
+          <th scope="col">carName</th>
+          <th scope="col">model</th>
+          <th scope="col">numberPlate</th>
+          <th scope="col">make</th>
+          <th scope="col">price</th>
+          <th scope="col">Pickup CompanyName</th>
+          <th scope="col">Pickup Address</th>
+          <th scope="col">Pick-Up Date</th>
+          <th scope="col">Drop-Off Date</th>
+          <th scope="col" colspan="3">Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let booking of bookings">
+          <th scope="row">{{booking.id}}</th>
+          <td>{{booking.firstname}}</td>
+          <td>{{booking.lastname}}</td>
+          <td>{{booking.carName}}</td>
+          <td>{{booking.model}}</td>
+          <td>{{booking.numberPlate}}</td>
+          <td>{{booking.make}}</td>
+          <td>{{booking.price}}</td>
+          <td>{{booking.companyName}}</td>
+          <td>{{booking.address}}</td>
+          <td>{{booking.pickup_date | date:'medium'}}</td>
+          <td>{{booking.dropoff_date | date:'medium'}}</td>
+          <td><button class="btn btn-primary"><i class="bi bi-eye"></i></button></td>
+          <td><button class="btn btn-primary"><i class="bi bi-pencil"></i></button></td>
+          <td><button class="btn btn-primary"><i class="bi bi-trash"></i></button></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+ </div>
   
