--- a/frontend/src/app/pages/seden/seden.component.html
+++ b/frontend/src/app/pages/seden/seden.component.html
@@ -47,5 +47,5 @@
                 </div>
               </div>
           </div>
-  
+          <button type="button" (click)="deleteCar(car.id)" class="btn btn-danger">Delete</button>
       </div>
